# open-data-product-eu-tenders

./: README.md  data-product-manifest.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml
.github/workflows/: crawl-content.yml
bruno/eu-tenders/: bruno.json  collection.bru
bruno/eu-tenders/Conversion/: Convert an XML notice.bru  folder.bru
bruno/eu-tenders/Developer Operations/: Renew the user API Key.bru  Return version-range.json.bru  folder.bru
bruno/eu-tenders/Publication/: Retrieve the notice validation report.bru  Search your submitted notices.bru  Stop the notice publication.bru  Submit XML notice.bru  folder.bru
bruno/eu-tenders/Search/: Search for notices using expert search query.bru
bruno/eu-tenders/Validation/: Validate a notice.bru  folder.bru
bruno/eu-tenders/Visualisation/: Get HTML or PDF rendering of a notice sent in the request body (POST).bru  Get HTML or PDF rendering of a notice sent in the request body.bru  folder.bru
bruno/eu-tenders/environments/: PROD.bru  TEDWEB.bru
data/01-bronze/eu-tenders-public-transport/: eu-tenders-public-transport-DE1.csv  eu-tenders-public-transport-DE2.csv  eu-tenders-public-transport-DE3.csv  eu-tenders-public-transport-DE4.csv  eu-tenders-public-transport-DE5.csv  eu-tenders-public-transport-DE6.csv  eu-tenders-public-transport-DE7.csv  eu-tenders-public-transport-DE8.csv  eu-tenders-public-transport-DE9.csv  eu-tenders-public-transport-DEA.csv  (+6 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
lib/: eu_ted_api_client.py  eu_ted_transformer.py
(+16 files in other folders)
